Use tify sources from official docu

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>My TIFY-Side</title>
-    <link href="https://unpkg.com/tify@latest/dist/tify.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tify@0.33.0/dist/tify.css">
 </head>
 <body>
     TIFY test
     <div id="tify" style="height: 640px"></div>
-    <script src="https://unpkg.com/tify@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tify@0.33.0/dist/tify.js"></script>
     <script>
         new Tify({
 	    container: '#tify',
