Add backend to deliver the manifest

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="tify" style="height: 640px"></div>
     <script src="https://cdn.jsdelivr.net/npm/tify@0.33.0/dist/tify.js"></script>
     <script>
-        let manifestUrl = 'https://iiif.wellcomecollection.org/presentation/v2/b20417081_001'
+        let manifestUrl = 'http://localhost:6701/manifest'
         new Tify({
 	    container: '#tify',
 	    manifestUrl: manifestUrl,
