Make tify available to own sources through backend

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>My TIFY-Side</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tify@0.33.0/dist/tify.css">
+    <link rel="stylesheet" href="http://localhost:6701/tify.css">
 </head>
 <body>
     TIFY test
     <div id="tify" style="height: 640px"></div>
-    <script src="https://cdn.jsdelivr.net/npm/tify@0.33.0/dist/tify.js"></script>
+    <script src="http://localhost:6701/tify.js"></script>
     <script>
         let manifestUrl = 'http://localhost:6701/manifest'
         new Tify({
